--- a/server/package.json
+++ b/server/package.json
@@ -12,7 +12,11 @@
     "debug": "~2.6.9",
     "dotenv": "^16.0.3",
     "express": "~4.16.1",
+    "mongoose": "^6.8.0",
     "morgan": "~1.9.1",
     "nodemon": "^2.0.20"
+  },
+  "devDependencies": {
+    "core-js": "^3.26.1"
   }
 }
